# python-sdk

./: .cursorignore  .env.example  .gitignore  CHANGELOG.md  README.md  hello.py  justfile  pyproject.toml
.cursor/rules/: no-update-notebook.mdc
.github/workflows/: ci.yml  release.yml
docs/: SDK_GUIDE.md
examples/: getting_started.ipynb
lightdash/: __init__.py  client.py  dimensions.py  exceptions.py  filter.py  metrics.py  models.py  query.py  results.py  sorting.py  sql_runner.py  table_calculations.py  types.py
tests/: test_acceptance.py  test_client.py  test_client_errors.py  test_compile.py  test_composite_filter_semantics.py  test_filter_operators.py  test_query_builder.py  test_results.py  test_row_limit.py  test_table_calculations.py  test_validation.py
