[project]
name = "lightdash"
version = "1.0.0"
description = "Official SDK for Lightdash"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Oliver Laslett", email = "oliver@lightdash.com"},
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",  # Required for Jupyter notebooks
    "pandas>=2.0.0",  # For DataFrame support in tests
    "polars>=1.22.0",  # For DataFrame support in tests
]

[tool.setuptools.packages.find]
include = ["lightdash*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
log_cli_level = "DEBUG"
