[project]
name = "lightdash"
version = "1.1.0"
description = "Official SDK for Lightdash"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Oliver Laslett", email = "oliver@lightdash.com"},
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",  # Required for Jupyter notebooks
    "pandas>=2.0.0",  # For DataFrame support in tests
    "polars>=1.22.0",  # For DataFrame support in tests
]


[tool.setuptools.packages.find]
include = ["lightdash*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
log_cli_level = "DEBUG"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
exclude_commit_patterns = ['''chore\(release\):.*''']

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Releases are automated by GitHub Actions (.github/workflows/release.yml).
# python-semantic-release computes the next version from Conventional Commit
# messages (feat: -> minor, fix: -> patch, BREAKING CHANGE -> major) since the
# last "v*" tag, bumps the version below, tags, creates a GitHub Release, and
# publishes to PyPI. Do not bump `version` by hand.
